--- a/fifa19_PlayersAnalysis.ipynb
+++ b/fifa19_PlayersAnalysis.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This my player analysis for players in FIFA 19"
+    "# Player analysis FIFA 19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Background\n",
+    "This is my first Data Visualization and Data Analysis project. The project is centered around the stats for the players in the popular video game FIFA 19. The data is provided from Kaggle from the following link: https://www.kaggle.com/karangadiya/fifa19\n",
+    "\n",
+    "#### Content\n",
+    "In the analysis of the players we look at some basic statistics regarding age distribution, relation between some key player stats and a comparision of the top 6 Premier League teams (Liverpool, Manchester City, Manchester United, Tottenham, Arsenal and Chelsea)."
    ]
   },
   {
@@ -21,7 +32,8 @@
     "\n",
     "# For data visualization\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -773,10 +785,22 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 33, 26, ..., 16, 17, 16], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create a Numpy array so we can use it in our histogram\n",
-    "x = np.array(df_fifa.Age)"
+    "x = np.array(df_fifa.Age)\n",
+    "x"
    ]
   },
   {
@@ -804,6 +828,13 @@
     "plt.ylabel(\"Number of players\")\n",
     "plt.title(\"Players age distribution\", fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see most players are in range from 21-26, which is a little lower than expected. The best footballing age is from 25-28, so distribution is a little lower than I expected."
    ]
   },
   {
@@ -907,6 +938,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liverpool have the most young players, in the range from 18-24, and Chelsea is by far the club with least youngest players.\n",
+    "\n",
+    "Manchester City and Manchester United look very simuarly with a very well distributed age range and Arsenal have most players in their \"best footballing age\" compared to the other top 6 clubs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -927,10 +967,20 @@
    "source": [
     "# Then we assign the value from the data set\n",
     "top6_clubs_aggression = df_fifa[df_fifa[\"Club\"].isin(selected_clubs) & df_fifa[\"Aggression\"]]\n",
+    "top6_clubs_aggression.mean()\n",
     "\n",
     "#Then we make a violin plot\n",
     "sns.violinplot(x=\"Club\", y=\"Aggression\", data=top6_clubs_aggression)\n",
     "sns.set_context(\"paper\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manchester United and Liverpool are the two teams with the highest aggression. Liverpool isn't a suprise following their high pressure football, but Man. United is a bit more of a surprise with players in the high aggrresion area.\n",
+    "\n",
+    "Chelsea is the team with the lowest aggression which can be coupled with their general age. This also follows the tracks that Liverpool, the youngest team, is the team with the highest aggression. "
    ]
   },
   {
@@ -958,6 +1008,17 @@
     "#Then we make a violin plot\n",
     "sns.violinplot(x=\"Club\", y=\"Potential\", data=top6_clubs_potential)\n",
     "sns.set_context(\"paper\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One interesting point is that Man. United and Man. City, with very simuarly age plot, have a almost reverse plot regarding their potential. City's players are more a team which is moving forward where United players is more on a downward slope.\n",
+    "\n",
+    "Liverpool have a much lower potential than expected when considered their low age and generally good form in real life, but this suggest that their squad doesn't have much depth. \n",
+    "\n",
+    "Not to much of a surprise Arsenal is the team with the lowest potential, which which follows the track of their old squad. "
    ]
   },
   {
@@ -1009,6 +1070,16 @@
     "plt.subplots_adjust(top=1.8, right=2.5)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can there is a big correlation between sprint speed and selected attributes.\n",
+    "Specially sprint speed and acceleration have a big connection, which isn't much of a surprise. There is also a correlation between sprint speed and dribling, but the fastest have dribling more in the 60-80 area, which can be explained by two parameters:\n",
+    "1. The fast players often aren't the most technical players. It's pretty coomon for fast players to have speed as their main strenght and aren't so technical, which drives the correlation down. \n",
+    "2. Some more technical players, no. 10 role and central midfielders in general, doesn't have much pace either which drives the correlation down."
    ]
   }
  ],
